Trying to fix mobile resize issue on Mobile Chrome

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,13 +21,14 @@ code {
   height: 130%;
   overflow-x: hidden;
   overflow-y: hidden;
+  background: linear-gradient(0deg, white, blue 80%) ;
 }
 
 #background video  {
-  position: absolute;
+  z-index: -1;
+  position: fixed;
   right: -5%;
   bottom: -5%;
-  min-width: 110%;
-  min-height: 130%;
-  height: 130%;
+  min-width: 110vh;
+  min-height: 110vh;
 }
